<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorCodeGearsRed"
    tools:context=".activity.MenuActivity">

<LinearLayout

    android:visibility="gone"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <Button

        android:id="@+id/bt_menu1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_Menu1"

        android:layout_weight="0"/>

    <Button
        android:id="@+id/bt_menu2"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:layout_width="wrap_content"
        android:text="@string/name_Menu2"
        android:layout_height="wrap_content" />

    <Button
    android:id="@+id/bt_menu3"
    android:layout_marginTop="20dp"
    android:layout_weight="0"
    android:layout_width="wrap_content"
    android:text="@string/name_Menu3"
    android:layout_height="wrap_content" />


    <Button
        android:id="@+id/bt_menu4"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:layout_width="wrap_content"
        android:text="@string/name_Menu4"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_menu5"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:layout_width="wrap_content"
        android:text="@string/name_Menu5"
        android:layout_height="wrap_content" />


</LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView" />


</LinearLayout>
