<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCodeGearsRed"

    android:orientation="vertical"
    tools:context=".activity.SubMenu1Activity">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_Menu_page2"
        android:textSize="30dp"
       android:gravity="center"



        />

    <LinearLayout
       android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
       >

        <EditText
            android:id="@+id/et_cal1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:hint="@string/name_Menu_page_edit"
            />

        <EditText
            android:id="@+id/et_cal2"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/name_Menu_page_edit"

            />
        <Button
            android:id="@+id/bt_cal1_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/name_Menu_click"
            android:layout_marginTop="20dp"/>


        <Button
            android:id="@+id/bt_cal1_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/name_Menu_clear"
            android:layout_marginTop="20dp"/>


    </LinearLayout>





    <TextView
        android:id="@+id/text_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_Menu_text"
        android:layout_marginTop="50dp"
        android:textSize="30dp"

        />


    <TextView
        android:id="@+id/text_view_number_cal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_Menu_text"
        android:gravity="center"
        android:layout_marginTop="40dp"

        />





</LinearLayout>
















