<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    android:paddingRight="10dp"

    android:paddingLeft="10dp"
    tools:context="com.codegears.programming.activity.SubMenu4Activty">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"

        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="มด (mravi)"
            android:textSize="30dp"
            android:gravity="center"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_text"
            android:hint="@string/input_number"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ex_number_ant"
            android:hint="@string/input_number_ant"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ex_number_start"
            android:hint="@string/input_number_start"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >


        <Button
            android:id="@+id/bt_cul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cul_number"
            android:layout_gravity="center"
            android:textSize="30dp"


            />

        <TextView
            android:id="@+id/text_data"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="35dp"
            android:text="data"/>


    </LinearLayout>






</LinearLayout>
