<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCodeGearsGreen"
    tools:context=".activity.SubMenu6Activity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"

        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Max Sequence"
            android:textSize="30dp"
            android:gravity="center"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_text"
            android:hint="@string/input_number_number"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/et_text_2"
            android:hint="@string/input_number_triangle"/>





    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >


        <Button
            android:id="@+id/bt_cul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cul_number"
            android:layout_gravity="center"
            android:textSize="30dp"


            />

        <TextView
            android:id="@+id/text_data"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="35dp"
            android:text="data"/>


    </LinearLayout>


</LinearLayout>
